RESOLVED FIXED295125
REGRESSION(292180@main) [iPhone] nhl.com: Captions don't appear in fullscreen
https://bugs.webkit.org/show_bug.cgi?id=295125
Summary REGRESSION(292180@main) [iPhone] nhl.com: Captions don't appear in fullscreen
Jer Noble
Reported 2025-06-27 14:02:10 PDT
REGRESSION(292180@main) [iPhone] nhl.com: Captions don't appear in fullscreen
Attachments
Jer Noble
Comment 1 2025-06-27 14:02:11 PDT
Jer Noble
Comment 2 2025-06-27 14:04:44 PDT
EWS
Comment 3 2025-06-27 19:28:02 PDT
Committed 296766@main (c3b98a8b2642): <https://commits.webkit.org/296766@main> Reviewed commits have been landed. Closing PR #47318 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.