REGRESSION(292180@main) [iPhone] nhl.com: Captions don't appear in fullscreen rdar://152123238 https://bugs.webkit.org/show_bug.cgi?id=295125

Reviewed by Andy Estes.

In 292180@main, we added a quirk that allowed NHL.com to move the video caption area through
with a `transform:translate(-1.5em)` rule. However, in the TextTrackRepresentation codepath,
the painting code did not include the flag which applied transforms during painting. This caused
empty paints to appear in iPhone fullscreen.

* Source/WebCore/html/shadow/MediaControlTextTrackContainerElement.cpp:
(WebCore::MediaControlTextTrackContainerElement::createTextTrackRepresentationImage):

Canonical link: https://commits.webkit.org/296766@main